# DirectX-Graphics-Samples-in-C

./: README.md
Samples/Desktop/D3D12Bundles/src/: CMakeLists.txt  README.md  frame_resource.c  frame_resource.h  main.c  occcity.c  occcity.h  sample.c  sample.h  sample_commons.c  sample_commons.h  simple_camera.c  simple_camera.h  step_timer.h  window.c  window.h
Samples/Desktop/D3D12Bundles/src/dxheaders/: d3dx12_macros.h  d3dx12c_core.h  d3dx12c_resource_helpers.h
Samples/Desktop/D3D12Bundles/src/shaders/: shader_mesh_alt_pixel.hlsl  shader_mesh_simple_pixel.hlsl  shader_mesh_simple_vert.hlsl
Samples/Desktop/D3D12DepthBoundsTest/src/: .gitignore  CMakeLists.txt  PipelineStateSubobjects.h  README.md  main.c  sample.c  sample.h  sample_commons.c  sample_commons.h  window.c
Samples/Desktop/D3D12DepthBoundsTest/src/dxheaders/: d3dx12_macros.h
Samples/Desktop/D3D12HelloWorld/src/HelloBundles/: CMakeLists.txt  README.md  main.c  sample.c  sample.h  window.c
Samples/Desktop/D3D12HelloWorld/src/HelloBundles/dxheaders/: README.md
Samples/Desktop/D3D12HelloWorld/src/HelloConstBuffers/: CMakeLists.txt  README.md  main.c  sample.c  sample.h
Samples/Desktop/D3D12HelloWorld/src/HelloConstBuffers/dxheaders/: d3dx12c_core.h
Samples/Desktop/D3D12HelloWorld/src/HelloFrameBuffering/: CMakeLists.txt  README.md  macros.h  main.c  sample.c  sample.h  sample_commons.c
Samples/Desktop/D3D12HelloWorld/src/HelloFrameBuffering/dxheaders/: d3dx12_macros.h  d3dx12c_barriers.h
Samples/Desktop/D3D12HelloWorld/src/HelloGenericPrograms/: README.md
Samples/Desktop/D3D12HelloWorld/src/HelloTexture/: .gitignore  CMakeLists.txt  README.md  main.c  resource_helpers.h  root_signature_helpers.h  sample.c  sample.h  sample_commons.c
Samples/Desktop/D3D12HelloWorld/src/HelloTexture/dxheaders/: d3dx12c_resource_helpers.h
Samples/Desktop/D3D12HelloWorld/src/HelloTriangle/: CMakeLists.txt  main.c  sample.c  sample.h  sample_commons.c  sample_commons.h
Samples/Desktop/D3D12HelloWorld/src/HelloVADecode/: CMakeLists.txt  DecodeParamBuffer.h  README.md  barrier_helpers.h  core_helpers.h  sample.c  sample.h  sample_commons.c  sample_commons.h
Samples/Desktop/D3D12HelloWorld/src/HelloVAEncode/: CMakeLists.txt  README.md  main.c  sample.c  sample.h  sample_commons.c  sample_commons.h  window.c
Samples/Desktop/D3D12HelloWorld/src/HelloVAEncode/dxheaders/: d3dx12_macros.h
Samples/Desktop/D3D12MeshShaders/src/DynamicLOD/: CMakeLists.txt  README.md  dynamic_lod.h  macros.h  main.c  model.c  model.h  sample.c  sample.h  sample_commons.c  sample_commons.h  shared.h  simple_camera.c  span.h  window.c
Samples/Desktop/D3D12MeshShaders/src/DynamicLOD/dxheaders/: core_helpers.h  d3dx12_pipeline_state_stream.h  d3dx12c_core.h
Samples/Desktop/D3D12MeshShaders/src/DynamicLOD/shaders/: Common.hlsli  MeshletAS.hlsl  MeshletMS.hlsl  MeshletPS.hlsl
